--- a/shopping_list/requirements.txt
+++ b/shopping_list/requirements.txt
@@ -10,6 +10,7 @@ Flask==0.12.2
 Flask-API==1.0
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.2
+gunicorn==19.7.1
 idna==2.6
 isort==4.2.15
 itsdangerous==0.24
