--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,4 @@ install:
  - pip install unitest
  - pip install Flask-API
 script: 
-   test_shopping_list.py
-   app.py
+   nosetests test_shopping_list.py
