--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,7 @@ colorama==0.3.9
 first==2.0.1
 Flask==0.12.2
 Flask-API==1.0
-Flask-Migrate==2.1.1
-Flask-SQLAlchemy==2.2
+Flask-WTF==0.14.2
 gunicorn==19.7.1
 idna==2.6
 isort==4.2.15
@@ -38,3 +37,4 @@ virtualenv==15.1.0
 virtualenv-clone==0.2.6
 Werkzeug==0.12.2
 wrapt==1.10.11
+WTForms==2.1
